js/js.translator/testData/incremental/invalidation/multiPlatformClashFileNamesWithCrossModuleInliner/lib1/js/l1.0.kt
inline fun jsFun() = 0
